--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -1,21 +1,26 @@
 .comment-container {
-    width: 80%;
+    width: 60%;
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
     border: black 2px solid;
 }
 
 .comment-container .comment-username {
+    padding: 1rem;
     grid-column: 1;
     grid-row: 1;
 }
 
 .comment-container .comment-content {
+    padding: 1rem;
+    word-break: break-all;
+    white-space: initial;
     grid-column: 1 / 6;
     grid-row: 2;
 }
 
 .comment-container .comment-time {
+    padding: 1rem;
     grid-column: 5;
     grid-row: 1;
 }
