--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,13 +4,14 @@
     display: flex;
     position: fixed;
     top: 0;
-    border-bottom: solid 0.1rem #ffffff;
     flex-direction: row;
     flex-wrap: nowrap;
-    background-color: #bdad9d;
+    background-color: #2d2d2d;
 }
 
 .navbar a, .navbar button {
+    font-weight: bold;
+    color: #a5a5a5;
     border: none;
     display: flex;
     align-items: center;
@@ -20,7 +21,6 @@
     text-decoration: none;
     padding: 0.6rem;
     font-size: 1.2rem;
-    color: black;
     transition: color 1s;
 }
 
