--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -1,6 +1,7 @@
 .post-container {
+    color: white;
+    background: #252437;
     overflow: hidden;
-    padding-left: 2rem;
     border-radius: 2rem;
     width: 80%;
     display: grid;
@@ -15,7 +16,31 @@
 }
 
 .post-container .content {
-    padding: 1rem;
+    background: #252437;
+    color: white;
+    padding: 2rem;
+    word-break: break-all;
+    white-space: initial;
+    min-height: 3rem;
+    grid-column: 1 / 5;
+    grid-row: 2;
+    border: 2px white solid;
+    border-radius: 0 1rem 1rem 0;
+}
+
+.post-container .content:focus {
+    outline: none;
+    background: #222222;
+    color: white;
+    border: 2px white solid;
+}
+
+.post-container .content:disabled {
+    border:none;
+}
+
+.post-container .content {
+    padding: 2rem;
     word-break: break-all;
     white-space: initial;
     min-height: 3rem;
@@ -30,9 +55,11 @@
 }
 
 .post-container .comments {
-    padding: 1rem;
+    gap: 1rem;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     grid-column: 1 / 5;
     grid-row: 5;
 }
@@ -45,27 +72,23 @@
 }
 
 .post-container .manage-post .edit-post {
-    border: none;
-    background: green;
+    font-weight: bold;
+    color: white;
+    border: solid 2px #114505;
+    background: #006505;
     width: 50%;
+    cursor: pointer;
     aspect-ratio : 1 / 1;
     border-radius: 0 0 0 2rem;
-
 }
 
 .post-container .manage-post .delete-post {
-    border: none;
-    background: red;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+    border: solid 2px #900000;
+    background: #a00000;
     width: 50%;
     aspect-ratio : 1 / 1;
 }
 
-.post-form {
-    overflow: hidden;
-    padding-left: 2rem;
-    border-radius: 2rem;
-    width: 80%;
-    display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    border: black 2px solid;
-}
