--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+    background: #4b4b4b;
     box-sizing: border-box;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,6 +7,10 @@ body {
     sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+    width: 100%;
 }
 
 code {
@@ -16,13 +21,4 @@ code {
 a {
     text-decoration: none;
     font-weight: 900;
-}
-
-input {
-    border: black solid 0.2rem;
-    border-radius: 1rem;
-    text-align: center;
-    padding: 0.5rem;
-    margin: 0.5rem;
-    width: 12rem;
 }
