--- a/src/pages/Chat.css
+++ b/src/pages/Chat.css
@@ -2,9 +2,10 @@
     margin-top: 1rem;
     gap: 1rem;
     display: flex;
-    width: 100vw;
-    flex-direction: column;
+    width: 100%;
+    flex-direction: column-reverse;
     align-content: center;
     align-items: center;
     justify-content: center;
 }
+
