--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,6 +7,7 @@
     flex-direction: row;
     flex-wrap: nowrap;
     background-color: #2d2d2d;
+    border-bottom: 2px solid black;
 }
 
 .navbar a, .navbar button {
