--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -16,15 +16,16 @@
 }
 
 .post-container .content {
-    background: #252437;
+    outline: none;
+    background: #222222;
     color: white;
+    border: 2px black solid;
     padding: 2rem;
     word-break: break-all;
     white-space: initial;
     min-height: 3rem;
     grid-column: 1 / 5;
     grid-row: 2;
-    border: 2px white solid;
     border-radius: 0 1rem 1rem 0;
 }
 
@@ -32,20 +33,12 @@
     outline: none;
     background: #222222;
     color: white;
-    border: 2px white solid;
+    border: 2px black solid;
 }
 
 .post-container .content:disabled {
+    background: #252437;
     border:none;
-}
-
-.post-container .content {
-    padding: 2rem;
-    word-break: break-all;
-    white-space: initial;
-    min-height: 3rem;
-    grid-column: 1 / 5;
-    grid-row: 2;
 }
 
 .post-container .time {
@@ -55,9 +48,10 @@
 }
 
 .post-container .comments {
+    padding: 1rem;
     gap: 1rem;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
     grid-column: 1 / 5;
