--- a/src/components/PostForm.css
+++ b/src/components/PostForm.css
@@ -1,4 +1,4 @@
-.collapsible-container {
+.collapsible-post-container {
     color: white;
     background: #252437;
     display: flex !important;
@@ -7,12 +7,12 @@
     align-items: center;
     align-content: center;
     width: 80%;
-    border: black solid 1px;
+    border: black solid 2px;
     border-radius: 2rem;
     overflow: hidden;
 }
 
-.collapsible-container .expand-button {
+.collapsible-post-container .expand-button {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -30,63 +30,32 @@
     height: 2rem;
 }
 
-.collapsible-container .expand-button:hover, .collapsible-container .expand-button:active {
+.collapsible-post-container .expand-button:hover, .collapsible-post-container .expand-button:active {
     text-decoration: none;
     color: white;
 }
 
-.collapsible-container .collapsible-child {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-}
-
-.post-form {
+.collapsible-post-container .post-form {
     display: grid;
     width: 100%;
     overflow: hidden;
     grid-template-columns: 20% 20% 20% 20% 20%;
 }
 
-.post-form .username {
+.collapsible-post-container .post-form .username {
     padding: 1rem;
     grid-column: 1;
     grid-row: 1;
 }
 
-.post-form .content {
-    padding: 1rem;
-    word-break: break-all;
-    white-space: initial;
-    min-height: 3rem;
-    grid-column: 1 / 5;
-    grid-row: 2;
-}
-
-.post-form .time {
-    padding: 1rem;
-    grid-column: 4;
-    grid-row: 1;
-}
-
-.post-form .comments {
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
-    grid-column: 1 / 5;
-    grid-row: 5;
-}
-
-.post-form .manage-post {
+.collapsible-post-container .post-form .manage-post {
     grid-row: 1 / 5;
     grid-column: 5;
     border: none;
     overflow: hidden;
 }
 
-.post-form .manage-post .send-post {
+.collapsible-post-container .post-form .manage-post .send-post {
     border: solid 2px #114505;
     background: #006505;
     color: white;
@@ -98,7 +67,7 @@
 
 }
 
-.post-form .manage-post .abort-post {
+.collapsible-post-container .post-form .manage-post .abort-post {
     font-weight: bold;
     color: white;
     border: solid 2px #900000;
@@ -108,7 +77,7 @@
     cursor: pointer;
 }
 
-.content-input {
+.collapsible-post-container .post-form .content-textarea {
     word-break: break-all;
     white-space: initial;
     min-height: 3rem;
