--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,19 @@ a {
     text-decoration: none;
     font-weight: 900;
 }
+
+input {
+    outline: none;
+    background: #222222;
+    color: white;
+    border: 2px black solid;
+    border-radius: 4px;
+}
+
+textarea {
+    resize: none;
+    outline: none;
+    background: #222222;
+    color: white;
+    border: 2px black solid;
+}
