--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -13,6 +13,8 @@
 }
 
 .home-container .confirm-nickname {
+    border: 2px solid black;
+    border-radius: 1rem;
     width: 5rem;
     height: 2rem;
     cursor: pointer;
