--- a/src/components/CommentForm.css
+++ b/src/components/CommentForm.css
@@ -1,4 +1,5 @@
 .comment-form-container {
+    gap: 1rem;
     align-items: center;
     width: 60%;
     display: flex;
@@ -24,4 +25,19 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+}
+
+.comment-form-container .send-comment {
+    font-size: 0.8rem;
+    padding: 0.2rem;
+    color: black;
+    display: flex;
+    font-weight: bold;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    border: 2px solid black;
+    border-radius: 1rem;
+    height: 2rem;
+    cursor: pointer;
 }
