--- a/src/pages/Chat.css
+++ b/src/pages/Chat.css
@@ -9,3 +9,16 @@
     justify-content: center;
 }
 
+.chat-container .new-post {
+    padding: 0.5rem;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    border: 2px solid black;
+    border-radius: 1rem;
+    height: 2rem;
+    cursor: pointer;
+}
+
