--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -12,10 +12,15 @@
     color: white;
 }
 
-.home-container .confirm-nickname {
+.home-container .confirm {
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: white;
     border: 2px solid black;
     border-radius: 1rem;
-    width: 5rem;
     height: 2rem;
+    padding: 0.5rem;
     cursor: pointer;
 }
