--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -10,7 +10,7 @@
     border-bottom: 2px solid black;
 }
 
-.navbar a, .navbar button {
+.navbar a {
     font-weight: bold;
     color: #a5a5a5;
     border: none;
@@ -20,12 +20,12 @@
     margin: 0;
     cursor: pointer;
     text-decoration: none;
-    padding: 0.5rem;
+    padding: 1rem;
     font-size: 1.2rem;
     transition: color 1s;
 }
 
-.navbar a:hover, .navbar a:active, .navbar button:hover, .navbar button:active {
+.navbar a:hover, .navbar a:active {
     text-decoration: none;
     color: white;
 }
