--- a/src/components/CommentForm.css
+++ b/src/components/CommentForm.css
@@ -1,29 +1,25 @@
 .comment-form-container {
-    gap: 1rem;
+    gap: 0.5rem;
     align-items: center;
     width: 60%;
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
+}
+
+.comment-form-container .text {
+    font-weight: bold;
 }
 
 .comment-form-container .comment-input {
-    box-sizing: border-box;
     height: 100%;
     width: 100%;
 }
 
 .comment-form-container .send-comment {
-    font-size: 0.8rem;
-    padding: 0.2rem;
     color: black;
-    display: flex;
     font-weight: bold;
-    justify-content: center;
-    align-items: center;
     background: white;
     border: 2px solid black;
     border-radius: 1rem;
-    height: 2rem;
     cursor: pointer;
 }
