--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,10 +1,11 @@
-.search-container {
-	display: flex;
-	margin-left: auto;
-	justify-content: center;
-	align-content: center;
-	align-items: center;
-	text-align: center;
-	flex-wrap: nowrap;
-	flex-direction: row;
+.search {
+    align-items: center;
+    display: flex;
+    padding: 1rem;
+    margin-left: auto;
+}
+
+.navbar .search input {
+    height: 60%;
+    width: 16rem;
 }
