--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,9 @@
 body {
-    background: #4b4b4b;
-    box-sizing: border-box;
+    width: 100%;
+    background-image: linear-gradient( 76.3deg,  rgba(44,62,78,1) 12.6%, rgba(69,103,131,1) 82.8% );    box-sizing: border-box;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-
-#root {
-    width: 100%;
 }
 
 code {
@@ -21,6 +14,10 @@ code {
 a {
     text-decoration: none;
     font-weight: 900;
+}
+
+#root {
+    width: 100%;
 }
 
 input {
