--- a/src/pages/Chat.css
+++ b/src/pages/Chat.css
@@ -5,3 +5,25 @@
     flex-direction: column;
     align-items: center;
 }
+
+.tags {
+    display: flex;
+    padding: 1rem;
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.tag {
+    font-size: 1rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    text-decoration: none;
+    color: #4294d3;
+    font-weight: bold;
+}
+
+.tag:hover {
+    color: #86b6f5;
+}
